4.52 => 4.53
2023-11-04

Improvment :
- End of Halloween event

 4.51 => 4.52
2023-09-22

Balance :
 - ArmStratus buff (better dmg/s and better HP 35K=>42K)
 - Exo & Skrog morph with level 5 instead 4

 Improvment :
 - Rework Orco
 - Delete Furie Unit
 - Add T2 & T3 Static Antinuke for Rumad. Add mobile into Vehicle Lab
 - Exo T4 Arm : Change model & Balance. Morph from Orco or Furie
 - Add T1 Long Range Missile Turret for Gok
 - Add New Model for T5 Gok Lab
 - Add New T4 Fighter for GOK : Za'Kul
 - Add New T4 Morph for Gok Satan : Slanesh
 - Split T3 Kbot/Veh Rumad (with adding Antarion for Rumad Veh)

 Fix :
  - Rumad T3 Kbot Lab
  - Fix T5 Aeroship Dust. Add MountedWeaponAccelerator on.

 4.50 => 4.51
2023-08-04

Balance :
  - Increase cost for all Commanders
  - Commanders unlock tech for Geo & Nano Morph
  - Rework All Shield for T2/T3 Talon & Gok Commanders
  - Rework All Shield for T4 Arm / Core / Tll Commanders and T4 King Rumad

 4.49 => 4.50
2023-07-26

Balance :
 - All MountedWeaponAccelerator fix to 1500 range. (All T5, and independance)
 - Many T6 Titan Weapon decrease range 1700=>1600
 - Boost T1 plasma Kbot (speed, + 10%, Hp + 10%)

 4.48 => 4.49
2023-07-12

Balance :
 - Delete Silver Morph for T4 Talon
 - delete MainWeapon for independence Talon
 - Decrease BuidPower for all T3 Air Rez (1500=>1000)
 - Increase cost for all T3  Geo except for Core
 - Add Limit Restriction Units (200) to all Ak Pewee Class
 - T1 Air Bomber : Balance damage between all faction. Need 5 bombers to destroy a Geo. Increase damage for arm / core to keep destroy this target in example.
 - Increase buildtime for all commander. Goal is to add more time to capture them.
 - All Gok Quadrupod except crab arty : Delete All-Terrain Feature
 - Some adjustement for all pewee class. Cost fixed at 50M min. Talon Sniper cost 85M=>45M and Energy cost 1400 => 2500. All units <50Metal are targeted by Juno

 Fix :
 - Mines Tech2+ are buildable

Improvment :