@@ -141,7 +141,7 @@ return {
 				impulseboost = 0,
 				impulsefactor = 0,
 				intensity = 1,
-				name = "Heavy plasma cannon",
+				name = "Anti-matter Cannon",
 				noselfdamage = true,
 				range = 1600,
 				reloadtime = 1,
@@ -181,7 +181,7 @@ return {
 				impulseboost = 0,
 				impulsefactor = 0,
 				intensity = 1,
-				name = "Heavy plasma cannon",
+				name = "Anti-matter Cannon",
 				noselfdamage = true,
 				range = 1500,
 				reloadtime = 2,
