@@ -4,7 +4,7 @@ return {
 		activatewhenbuilt = true,
 		amphibious = 1,
 		brakerate = 0.025,
-		buildcostenergy = 4025000,
+		buildcostenergy = 4325000,
 		buildcostmetal = 495010,
 		builder = false,
 		buildpic = "rumad_mcv2.dds",
@@ -32,7 +32,7 @@ return {
 		mass = 495010,
 		maxdamage = 900000,
 		maxslope = 12,
-		maxvelocity = 1.4,
+		maxvelocity = 1.0,
 		maxwaterdepth = 12,
 		mobilestandorders = 1,
 		movementclass = "HTANK15",
